[package]
authors = ["Webb Technologies Inc."]
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "pallet-mixer"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive", "max-encoded-len"]}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}

webb-primitives = {path = "../../primitives", features = ["verifying"], default-features = false}
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
orml-currencies = {path = "../../open-runtime-module-library/currencies", default-features = false}
orml-tokens = {path = "../../open-runtime-module-library/tokens", default-features = false}
orml-traits = {path = "../../open-runtime-module-library/traits", default-features = false}
pallet-asset-registry = {path = "../asset-registry", default-features = false}
pallet-hasher = {path = "../hasher", default-features = false}
pallet-mt = {path = "../mt", default-features = false}
pallet-verifier = {path = "../verifier", default-features = false}
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}

frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16", optional = true}
frame-system-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16", optional = true}

[dev-dependencies]
ark-bls12-377 = {version = "^0.3.0", default-features = false, features = ["curve", "r1cs"]}
ark-bls12-381 = {version = "^0.3.0", default-features = false, features = ["curve"]}
ark-bn254 = {version = "^0.3.0", default-features = false, features = ["curve"]}
ark-crypto-primitives = {version = "^0.3.0", features = ["r1cs"], default-features = false}
ark-ec = {version = "^0.3.0", default-features = false}
ark-ff = {version = "^0.3.0", default-features = false}
ark-relations = {version = "^0.3.0", default-features = false}
ark-serialize = {version = "^0.3.0", default-features = false, features = ["derive"]}
ark-std = {version = "^0.3.0", default-features = false}

arkworks-gadgets  = { version = "0.4.19", default-features = false }
arkworks-circuits = { version = "0.4.19", default-features = false }
arkworks-utils    = { version = "0.4.19", features = ["default_poseidon", "default_mimc"], default-features = false }

wasm-utils = { version = "0.1.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16", default-features = false }
pallet-asset-registry = { path = "../asset-registry", default-features = false }
serde = {version = "1.0.119"}
hex = "0.4"
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "orml-traits/std",
  "orml-tokens/std",
  "orml-currencies/std",
  "sp-runtime/std",
  "sp-std/std",
  "pallet-hasher/std",
  "pallet-mt/std",
  "pallet-verifier/std",
  "webb-primitives/std",
  "pallet-asset-registry/std",
  "frame-benchmarking/std",
]
